# Prep_PS_UGV_robo

./: README.md
gazebo_spawn_pkg/: CMakeLists.txt  package.xml
gazebo_spawn_pkg/config/: bambot_controllers.yaml
gazebo_spawn_pkg/launch/: spawn_robot_launch.py
gazebo_spawn_pkg/src/: spawn_robot.cpp
gazebo_spawn_pkg/urdf/: bambot_v2.urdf
gazebo_spawn_pkg/worlds/: explore.world  manipulation.world
